@@ -158,7 +158,7 @@ static int _make_vg_consistent(struct cmd_context *cmd, struct volume_group *vg)
 	struct lv_segment *seg, *mirrored_seg;
 	struct lv_segment_area area;
 	unsigned s;
-	uint32_t mimages;
+	uint32_t mimages, remove_log;
 	int list_unsafe, only_mirror_images_found;
 	LIST_INIT(lvs_changed);
 	only_mirror_images_found = 1;
@@ -259,7 +259,10 @@ static int _make_vg_consistent(struct cmd_context *cmd, struct volume_group *vg)
 			mirrored_seg = first_seg(lvl->lv);
 			if (!seg_is_mirrored(mirrored_seg))
 				continue;
+
 			mimages = mirrored_seg->area_count;
+			remove_log = 0;
+
 			for (s = 0; s < mirrored_seg->area_count; s++) {
 				list_iterate_items_safe(lvl2, lvlt, &lvs_changed) {
 					if (seg_type(mirrored_seg, s) != AREA_LV ||
@@ -272,8 +275,24 @@ static int _make_vg_consistent(struct cmd_context *cmd, struct volume_group *vg)
 					mimages--;	/* FIXME Assumes uniqueness */
 				}
 			}
-			if (mimages != mirrored_seg->area_count) {
-				if (!remove_mirror_images(mirrored_seg, mimages, NULL, 0)) {
+
+			if (mirrored_seg->log_lv) {
+				list_iterate_items(seg, &mirrored_seg->log_lv->segments) {
+					/* FIXME: The second test shouldn't be required */
+					if ((seg->segtype ==
+					     get_segtype_from_string(vg->cmd, "error")) ||
+					    (!strcmp(seg->segtype->name, "error"))) {
+						log_print("The log device for %s/%s has failed.",
+							  vg->name, mirrored_seg->lv->name);
+						remove_log = 1;
+						break;
+					}
+				}
+			}
+
+			if ((mimages != mirrored_seg->area_count) || (remove_log)){
+				if (!reconfigure_mirror_images(mirrored_seg, mimages,
+							       NULL, remove_log)) {
 					stack;
 					return 0;
 				}
@@ -295,14 +314,20 @@ static int _make_vg_consistent(struct cmd_context *cmd, struct volume_group *vg)
 
 		/* Deactivate error LVs */
 		if (!test_mode()) {
-			list_iterate_items(lvl, &lvs_changed) {
+			list_iterate_items_safe(lvl, lvlt, &lvs_changed) {
 				log_verbose("Deactivating (if active) logical volume %s",
 					    lvl->lv->name);
 
 				if (!deactivate_lv(cmd, lvl->lv)) {
 					log_error("Failed to deactivate LV %s",
 						  lvl->lv->name);
-					return 0;
+					/*
+					 * We failed to deactivate.
+					 * Probably because this was a mirror log.
+					 * Don't try to lv_remove it.
+					 * Continue work on others.
+					 */
+					list_del(&lvl->list);
 				}
 			}
 		}
