@@ -1,5 +1,6 @@
 Version 2.02.06 -
 =================================
+  Allow vgreduce to handle mirror log failures.
   Add --corelog to lvcreate and lvconvert.
   Create a log header for replacement in-sync mirror log.
   Use set_lv() and dev_set() to wipe sections of devices.
